templates/inventory-coolstore_template.yaml
---
# Source: inventory-coolstore/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventory
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: coolstore
    app.openshift.io/runtime-version: "11"
  name: inventory-coolstore
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: inventory
status:
  loadBalancer: {}
---
# Source: inventory-coolstore/templates/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: inventory-mariadb
  labels:
    app: inventory
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: coolstore
    app.openshift.io/runtime: quarkus
  name: inventory-coolstore
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: inventory-coolstore
    app: inventory
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      creationTimestamp: null
      labels:
        deploymentconfig: inventory-coolstore
        app: inventory
        app.kubernetes.io/instance: inventory
        maistra.io/expose-route: "true"
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/default/inventory-coolstore:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: inventory-coolstore
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: 8443-tcp
          protocol: TCP
        - containerPort: 8778
          name: 8778-tcp
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /deployments/config
          name: cm-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: inventory
        name: cm-volume
  test: false
  triggers: []
---
# Source: inventory-coolstore/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: coolstore
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/part-of: coolstore
  name: inventory-coolstore
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: inventory-coolstore
    weight: 100
  wildcardPolicy: None
